[gd_scene load_steps=37 format=3 uid="uid://cg8go2l2cxvrr"]

[ext_resource type="Script" uid="uid://m0vo80u81tm4" path="res://Scenes/Battles/battle.gd" id="1_sv376"]
[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_y7qvo"]
[ext_resource type="PackedScene" uid="uid://belsbfnyg7qx6" path="res://Scenes/Entities/Enemy/enemy.tscn" id="2_a1hac"]
[ext_resource type="PackedScene" uid="uid://cpmt1g8vco303" path="res://Scenes/CardTargetSelector/card_target_selector.tscn" id="2_drp5d"]
[ext_resource type="Script" uid="uid://cvoj34k3wc4xd" path="res://Scenes/hand.gd" id="2_mj6w3"]
[ext_resource type="PackedScene" uid="uid://byi7xd4w7s22c" path="res://Scenes/Entities/Player/player.tscn" id="3_5nwcd"]
[ext_resource type="AudioStream" uid="uid://dpdenqqbovwfq" path="res://art/8_bit_iced_village_lofi.mp3" id="3_dsxls"]
[ext_resource type="Script" uid="uid://chhay6girj0f5" path="res://Scenes/Entities/entity_handler.gd" id="5_58hwi"]
[ext_resource type="Script" uid="uid://b2wh0ts0jtr4b" path="res://Scenes/Entities/Enemy/enemy_handler.gd" id="5_vvw4b"]
[ext_resource type="Script" uid="uid://b6lxeha4htk5v" path="res://Scenes/UI/battle_ui.gd" id="6_n84um"]
[ext_resource type="Script" uid="uid://qrdd8xa7fdtk" path="res://Scenes/Entities/Player/player_handler.gd" id="7_35xfd"]
[ext_resource type="Resource" uid="uid://blu6htqvxnnqj" path="res://Character Attributes/Typings/Normal/Munchlax/Munchlax/munchlax.tres" id="8_kqcte"]
[ext_resource type="Resource" uid="uid://cvqrve7qj0i15" path="res://Character Attributes/Typings/Ghost/Gimmighoul/gimmighoul.tres" id="9_macgk"]
[ext_resource type="PackedScene" uid="uid://ce4ljv3vn70s5" path="res://Scenes/UI/tooltip.tscn" id="11_jaoj8"]
[ext_resource type="PackedScene" uid="uid://bocfm5sgfyw0q" path="res://Scenes/CardUI/mana_ui.tscn" id="11_pju2q"]
[ext_resource type="Theme" uid="uid://cru70siydt0qh" path="res://main_theme.tres" id="12_gvgu6"]
[ext_resource type="Script" uid="uid://c3w42dqbnd0j6" path="res://Custom Resources/status.gd" id="13_vj1xe"]
[ext_resource type="Script" uid="uid://b78d7w51hh8qh" path="res://Scenes/UI/red_flash.gd" id="14_jsucr"]
[ext_resource type="PackedScene" uid="uid://04bxkbtrehtr" path="res://Scenes/UI/battle_over_panel.tscn" id="16_a8mcp"]
[ext_resource type="PackedScene" uid="uid://b7cfrckcq2fw" path="res://Enemy Attributes/Rattata/rattata_ai.tscn" id="17_es1rc"]
[ext_resource type="SpriteFrames" uid="uid://g026eg0t0von" path="res://Pokemon Assets/Pokemon/Rattata/rattata_animation.tres" id="18_dqot8"]
[ext_resource type="Texture2D" uid="uid://bnkuicnjifaxj" path="res://Pokemon Assets/Pokemon/Rattata/rattata_icon.png" id="19_gbbp2"]
[ext_resource type="Script" uid="uid://y1k7frusnwvb" path="res://Custom Resources/enemy_stats.gd" id="20_uceqb"]
[ext_resource type="PackedScene" uid="uid://cbf7mxnth6of" path="res://Enemy Attributes/Zubat/zubat_ai.tscn" id="21_taama"]
[ext_resource type="SpriteFrames" uid="uid://guridbhhulb7" path="res://Pokemon Assets/Pokemon/Zubat/zubat_animation.tres" id="22_ybtfr"]
[ext_resource type="Texture2D" uid="uid://texi34ehy7on" path="res://Pokemon Assets/Pokemon/Zubat/zubat_icon.png" id="23_4ltmd"]
[ext_resource type="PackedScene" uid="uid://bl1f18qvt7fmi" path="res://Scenes/UI/card_pile_opener.tscn" id="25_80ihm"]
[ext_resource type="PackedScene" uid="uid://buga4toas8bo0" path="res://Scenes/UI/turn_order_ui.tscn" id="25_p4sw4"]
[ext_resource type="Texture2D" uid="uid://2cn3pj20yded" path="res://art/discard.png" id="26_6n5t4"]
[ext_resource type="PackedScene" uid="uid://ks5d7bh7lhac" path="res://Scenes/UI/crit_ui.tscn" id="28_tefop"]
[ext_resource type="PackedScene" uid="uid://cuvmgun3qn87y" path="res://Scenes/UI/card_pile_view.tscn" id="29_imlis"]
[ext_resource type="PackedScene" uid="uid://dcbhq0slrgft0" path="res://Scenes/UI/status_view.tscn" id="30_u4i4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eksh8"]
size = Vector2(768, 327)

[sub_resource type="Resource" id="Resource_7l4ot"]
resource_local_to_scene = true
script = ExtResource("20_uceqb")
ai = ExtResource("17_es1rc")
name = "Rattata"
maxHealth = 10
entitySpeed = 72
battleStartStatuses = Array[ExtResource("13_vj1xe")]([])
animation = ExtResource("18_dqot8")
icon = ExtResource("19_gbbp2")

[sub_resource type="Resource" id="Resource_s7e33"]
resource_local_to_scene = true
script = ExtResource("20_uceqb")
ai = ExtResource("21_taama")
name = "Zubat"
maxHealth = 8
entitySpeed = 55
battleStartStatuses = Array[ExtResource("13_vj1xe")]([])
animation = ExtResource("22_ybtfr")
icon = ExtResource("23_4ltmd")

[sub_resource type="Resource" id="Resource_sgi66"]
resource_local_to_scene = true
script = ExtResource("20_uceqb")
ai = ExtResource("21_taama")
name = "Zubat"
maxHealth = 8
entitySpeed = 55
battleStartStatuses = Array[ExtResource("13_vj1xe")]([])
animation = ExtResource("22_ybtfr")
icon = ExtResource("23_4ltmd")

[node name="Battle" type="Node2D"]
script = ExtResource("1_sv376")
charStatsP1 = ExtResource("9_macgk")
charStatsP2 = ExtResource("8_kqcte")
music = ExtResource("3_dsxls")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.393086, 0.393086, 0.393085, 1)
scale = Vector2(3, 3)
texture = ExtResource("1_y7qvo")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(384, 163.5)
shape = SubResource("RectangleShape2D_eksh8")
debug_color = Color(0, 0.237515, 0.282173, 0.42)

[node name="EntityHandler" type="Node2D" parent="."]
script = ExtResource("5_58hwi")

[node name="PlayerHandler" type="Node2D" parent="EntityHandler" node_paths=PackedStringArray("hand") groups=["player_handler"]]
unique_name_in_owner = true
script = ExtResource("7_35xfd")
hand = NodePath("../../BattleUI/Hand")

[node name="Player" parent="EntityHandler/PlayerHandler" instance=ExtResource("3_5nwcd")]
position = Vector2(102, 231)
stats = ExtResource("9_macgk")

[node name="Player2" parent="EntityHandler/PlayerHandler" instance=ExtResource("3_5nwcd")]
position = Vector2(270, 222)

[node name="EnemyHandler" type="Node2D" parent="EntityHandler"]
unique_name_in_owner = true
position = Vector2(0, 1)
script = ExtResource("5_vvw4b")

[node name="Rattata" parent="EntityHandler/EnemyHandler" instance=ExtResource("2_a1hac")]
position = Vector2(587, 254)
stats = SubResource("Resource_7l4ot")

[node name="Zubat" parent="EntityHandler/EnemyHandler" instance=ExtResource("2_a1hac")]
position = Vector2(460, 165)
stats = SubResource("Resource_s7e33")

[node name="Zubat2" parent="EntityHandler/EnemyHandler" instance=ExtResource("2_a1hac")]
position = Vector2(697, 135)
stats = SubResource("Resource_sgi66")

[node name="CardTargetSelector" parent="." instance=ExtResource("2_drp5d")]

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("6_n84um")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -76.0
offset_right = 155.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_mj6w3")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_pju2q")]
offset_left = 12.0
offset_top = -82.0
offset_right = 50.0
offset_bottom = -44.0

[node name="Tooltip" parent="BattleUI" instance=ExtResource("11_jaoj8")]
offset_left = -111.0
offset_top = 40.0
offset_right = 109.0
offset_bottom = 112.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -78.0
offset_right = -12.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_gvgu6")
disabled = true
text = "End Turn"

[node name="TurnOrderUI" parent="BattleUI" instance=ExtResource("25_p4sw4")]
offset_top = 34.0
offset_bottom = 52.0
scale = Vector2(0.5, 0.5)

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("25_80ihm")]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 395.0
offset_right = 40.0
offset_bottom = 425.0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DrawPileButton"]
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 59.0
offset_bottom = 42.0
theme = ExtResource("12_gvgu6")
text = "9"

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("25_80ihm")]
unique_name_in_owner = true
offset_left = 727.0
offset_top = 395.0
offset_right = 757.0
offset_bottom = 425.0
texture_normal = ExtResource("26_6n5t4")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileButton"]
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 59.0
offset_bottom = 42.0
theme = ExtResource("12_gvgu6")
text = "9"

[node name="CritUI" parent="BattleUI" instance=ExtResource("28_tefop")]
offset_left = 701.0
offset_top = 197.0
offset_right = 756.0
offset_bottom = 363.0

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("14_jsucr")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.862745, 0.301961, 0.298039, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("16_a8mcp")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("29_imlis")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("29_imlis")]
unique_name_in_owner = true
visible = false

[node name="StatusViewLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="StatusView" parent="StatusViewLayer" instance=ExtResource("30_u4i4m")]
visible = false
